--- a/problem-1-multiples-of-3-and-5.ipynb
+++ b/problem-1-multiples-of-3-and-5.ipynb
@@ -13,7 +13,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Porject Euler - Problem 1"
+      "Project Euler - Problem 1"
      ]
     },
     {
