--- a/problem-12-highly-divisible-triangular-number.ipynb
+++ b/problem-12-highly-divisible-triangular-number.ipynb
@@ -702,7 +702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Version 3: Really basic number theory"
+    "### Version 3: Pretty basic number theory"
    ]
   },
   {
@@ -713,7 +713,7 @@
     "\n",
     "Observe that $n$ and $n+1$ are coprime. That is, $\\gcd{(n, n+1)} = 1$. Note that one of $n, n+1$ must be even and that in general $\\gcd{(a, 2b)} = 1 \\Rightarrow \\gcd{(a, b)} = 1$ for integers $a, b$.\n",
     "\n",
-    "Say $n = 2k$. Then $T_n = \\frac{n(n+1)}{2} = k(2k+1)$. Then, $\\gcd{(n, n+1)} = 1 \\Rightarrow \\gcd{(\\frac{n}{2}, n+1)} = \\gcd{(k, 2k+1)} = 1$ - the only common positive factor of $k$ and $2k+1$ is 1, so we need only find their respective factors and combine them together. \n",
+    "Say $n = 2k$. Then $T_n = \\frac{n(n+1)}{2} = k(2k+1)$. Then, $\\gcd{(n, n+1)} = 1 \\Rightarrow \\gcd{(\\frac{n}{2}, n+1)} = \\gcd{(k, 2k+1)} = 1$ - the only common positive factor of $k$ and $2k+1$ is $1$, so we need only find their respective factors and combine them together. \n",
     "\n",
     "The same goes for the case where $n = 2k+1$. We have $T_n = \\frac{n(n+1)}{2} =(k+1)(2k+1)$ and $\\gcd{(n, n+1)} = 1\\Rightarrow \\gcd{(n, \\frac{n+1}{2})} = \\gcd{(2k+1, k+1)}=1$, so we factorize $2k+1$ and $k+1$.\n",
     "\n",
