--- a/problem-9-special-pythagorean-triplet.ipynb
+++ b/problem-9-special-pythagorean-triplet.ipynb
@@ -11,9 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A Pythagorean triplet is a set of three natural numbers, $a < b < c$, for which,\n",
-    "\n",
-    "$a^2 + b^2 = c^2$\n",
+    "A Pythagorean triplet is a set of three natural numbers, $a < b < c$, for which,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "a^2 + b^2 = c^2\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For example, $3^2 + 4^2 = 9 + 16 = 25 = 5^2$.\n",
     "\n",
     "There exists exactly one Pythagorean triplet for which $a + b + c = 1000$.\n",
