updated all to python 3, added teaser ends and removed header

--- a/problem-47-distinct-primes-factors.ipynb
+++ b/problem-47-distinct-primes-factors.ipynb
@@ -40,20 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -72,13 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from itertools import count, imap, tee, izip"
+    "from itertools import count, tee\n",
+    "from six.moves import map, reduce, zip"
    ]
   },
   {
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -99,9 +91,16 @@
     "def nwise(iterable, n=2):\n",
     "    iters = tee(iterable, n)\n",
     "    for i, it in enumerate(iters):\n",
-    "        for _ in xrange(i):\n",
+    "        for _ in range(i):\n",
     "            next(it, None)\n",
-    "    return izip(*iters)"
+    "    return zip(*iters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- TEASER_END -->"
    ]
   },
   {
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -124,18 +123,18 @@
        "[(0, 1, 2, 3, 4, 5, 6, 7, 8), (1, 2, 3, 4, 5, 6, 7, 8, 9)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(nwise(xrange(10), 9))"
+    "list(nwise(range(10), 9))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -152,13 +151,13 @@
        " (6, 7, 8, 9)]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(nwise(xrange(10), 4))"
+    "list(nwise(range(10), 4))"
    ]
   },
   {
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -181,14 +180,14 @@
     "    The first consecutive n numbers \n",
     "    to have m distinct prime factors\n",
     "    \"\"\"\n",
-    "    for factors in nwise(imap(prime_factors, count(2)), n):\n",
+    "    for factors in nwise(map(prime_factors, count(2)), n):\n",
     "        if all(map(lambda x: len(x) == m, factors)):\n",
     "            return factors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -196,10 +195,10 @@
     {
      "data": {
       "text/plain": [
-       "(Counter({2: 1, 7: 1}), Counter({3: 1, 5: 1}))"
+       "(Counter({2: 1, 7.0: 1}), Counter({3: 1, 5.0: 1}))"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +227,7 @@
        "27"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +250,7 @@
        "Counter({2: 3, 3: 1})"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +272,7 @@
        "[8, 3]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +281,7 @@
     "# recall that map can be applied \n",
     "# to a variable number of lists, \n",
     "# i.e. map(func, (a0, a1, ...), (b0, b1, ...)) -> [func(a0, b0), func(a1, b1), ...]\n",
-    "map(pow, c.keys(), c.values())"
+    "list(map(pow, c.keys(), c.values()))"
    ]
   },
   {
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -323,7 +322,7 @@
        "1"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +344,7 @@
        "720"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -368,7 +367,7 @@
        "24"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -397,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -408,7 +407,7 @@
        "24"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -434,21 +433,21 @@
     {
      "data": {
       "text/plain": [
-       "[14, 15]"
+       "[14.0, 15.0]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "map(multiple, consecutive_distinct_factors(2, 2))"
+    "list(map(multiple, consecutive_distinct_factors(2, 2)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -456,21 +455,21 @@
     {
      "data": {
       "text/plain": [
-       "[644, 645, 646]"
+       "[644, 645.0, 646]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "map(multiple, consecutive_distinct_factors(3, 3))"
+    "list(map(multiple, consecutive_distinct_factors(3, 3)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -478,16 +477,16 @@
     {
      "data": {
       "text/plain": [
-       "[134043, 134044, 134045, 134046]"
+       "[134043.0, 134044, 134045, 134046.0]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "map(multiple, consecutive_distinct_factors(4, 4))"
+    "list(map(multiple, consecutive_distinct_factors(4, 4)))"
    ]
   },
   {
@@ -500,21 +499,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
