--- a/problem-9-special-pythagorean-triplet.ipynb
+++ b/problem-9-special-pythagorean-triplet.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Euler - Problem 9"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "A Pythagorean triplet is a set of three natural numbers, $a < b < c$, for which,"
    ]
   },
@@ -44,7 +37,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a fairly straighforward constraint satisfaction problem (CSP) and is perhaps most easily solved in a CSP modelling language such as MiniZinc. However, to employ such tools would be to defeat the very purpose of the exercise, which is to give us practice with implementation."
+    "This is a fairly straighforward constraint satisfaction problem (CSP) and is perhaps most easily solved in a CSP modelling language such as MiniZinc. However, to employ such tools would be to defeat the very purpose of the exercise, which is to give us practice with implementation.\n",
+    "\n",
+    "<!-- TEASER_END -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from six.moves import range, reduce"
    ]
   },
   {
@@ -56,18 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pair_sum_eq = lambda n, start=0: ((i, n-i) for i in xrange(start, (n>>1)+1))"
+    "pair_sum_eq = lambda n, start=0: ((i, n-i) for i in range(start, (n>>1)+1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +84,7 @@
        "[(5, 16), (6, 15), (7, 14), (8, 13), (9, 12), (10, 11)]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,27 +97,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that $3a < a + b + c = 1000$, so $a < \\frac{1000}{3} \\Leftrightarrow a \\leq \\lfloor \\frac{1000}{3} \\rfloor = 333$ so $1 \\leq a \\leq 333$. Therefore, we need only iterate up to 333 in the outermost loop. Now, $b + c = 1000 - a$, so $667 \\leq b + c \\leq 999$, so we look at all pairs $333 \\leq b < c$ such that $b + c = 1000 - a$ with the help of the function `pair_sum_eq`. Within the innermost loop, the $a, b, c$ now satisfy the constraints $a < b < c$ and $a + b + c = 1000$ so now we need only check that they indeed form a Pythagorean triplet, i.e. $a^2 + b^2 = c^2$, and yield it."
+    "Note that $3a < a + b + c = 1000$, so $a < \\frac{1000}{3} \\Leftrightarrow a \\leq \\lfloor \\frac{1000}{3} \\rfloor = 333$ so $1 \\leq a \\leq 333$. Therefore, we need only iterate up to 333 in the outermost loop. Now, $b + c = 1000 - a$, so $667 \\leq b + c \\leq 999$, so we look at all pairs $333 \\leq b < c$ such that $b + c = 1000 - a$ with the help of the function `pair_sum_eq`. Within the innermost loop, the $a, b, c$ now satisfy the constraints $a < b < c$ and $a + b + c = 1000$ so now we need only check that they indeed form a Pythagorean triplet, i.e. $a^2 + b^2 = c^2$, and yield it.\n",
+    "\n",
+    "<!-- TEASER_END -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def pythagorean_triplet_sum_eq(n):\n",
-    "    for a in xrange(1, n/3+1):\n",
-    "        for b, c in pair_sum_eq(n-a, start=n/3):\n",
+    "    for a in range(1, n//3+1):\n",
+    "        for b, c in pair_sum_eq(n-a, start=n//3):\n",
     "            if a*a + b*b == c*c:\n",
     "                yield a, b, c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +130,7 @@
        "[(200, 375, 425)]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -152,10 +160,10 @@
     {
      "data": {
       "text/plain": [
-       "31875000"
+       "(200, 375, 425)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,30 +180,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "*Coming Soon*"
+    "# TODO"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
