--- a/problem-4-largest-palindrome-product.ipynb
+++ b/problem-4-largest-palindrome-product.ipynb
@@ -1,64 +1,79 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:df93c14b064a54936e66669f1b78bae13b3ee54c330b53681a8c2c829b1a800c"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
- "worksheets": [
+ "cells": [
   {
-   "cells": [
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A palindromic number reads the same both ways. The largest palindrome made from the product of two 2-digit numbers is 9009 = 91 × 99.\n",
+    "\n",
+    "Find the largest palindrome made from the product of two 3-digit numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from six.moves import filter, range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "is_palindrome = lambda s: s == s[::-1]\n",
+    "num_is_palindrome = lambda n: is_palindrome(str(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
-     "cell_type": "heading",
-     "level": 2,
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
-     "source": [
-      "Project Euler - Problem 4"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "A palindromic number reads the same both ways. The largest palindrome made from the product of two 2-digit numbers is 9009 = 91 \u00d7 99.\n",
-      "\n",
-      "Find the largest palindrome made from the product of two 3-digit numbers."
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "is_palindrome = lambda s: s == s[::-1]\n",
-      "num_is_palindrome = lambda n: is_palindrome(str(n))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "max(filter(num_is_palindrome, (x*y for x in xrange(100, 1000) for y in xrange(x, 1000))))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 22,
-       "text": [
-        "906609"
-       ]
-      }
-     ],
-     "prompt_number": 22
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "max(filter(num_is_palindrome, (x*y for x in range(100, 1000) for y in range(x, 1000))))"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
